replace more macro with aliases and remove duplicate operators (fixes #10)

--- a/featuretest.tex
+++ b/featuretest.tex
@@ -2,6 +2,7 @@
 
 \rSec0[feature.test]{Feature test macros (Informative)}
 
+\begin{addedblock}
 \begin{floattable}{Feature-test macro(s)}{tab:info.features}
 {ll}
 \topline
@@ -13,4 +14,4 @@
 \tcode{__cpp_lib_numeric_machine_layer}  & \tcode{\tsver}      \\
 \tcode{__cpp_lib_rational}  & \tcode{\tsver}      \\
 \end{floattable}
-
+\end{addedblock}
