--- a/unboundedinteger.tex
+++ b/unboundedinteger.tex
@@ -1326,7 +1326,7 @@ strong_ordering operator<=>(const integer& lhs, const integer& rhs) noexcept;
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{strong_equality{lhs.compare(rhs)};}.
+\returns \tcode{strong_ordering\{lhs.compare(rhs)\};}.
 \end{itemdescr}
 
 \rSec2[numeric.integer.assign]{Assignment}
