Add links to the original papers

--- a/aliases.tex
+++ b/aliases.tex
@@ -1,6 +1,9 @@
 %!TEX root = ts.tex
 
 \rSec0[parametric_aliases]{Parametric aliases}
+\begin{reviewnote}
+The initial wording and motivation are available at \hyperlink{http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2015/p0102r0.html}{P0102R0 "C++ Parametric Number Type Aliases"}.
+\end{reviewnote}
 
 Parametric aliases provide a machine-independent mechanism to specify the desired allocation size built-in or extended types.
 
