--- a/rational.tex
+++ b/rational.tex
@@ -2,7 +2,9 @@
 \begin{addedblock}
 
 \rSec0[rational.math]{Rational math}
-
+\begin{reviewnote}
+The initial wording and motivation are available at \hyperlink{http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2013/n3611.html}{N3611 "A Rational Number Library for C++"}.
+\end{reviewnote}
 \rSec1[rational.class]{Class \tcode{rational}}
 
 \begin{codeblock}
