--- a/unboundedinteger.tex
+++ b/unboundedinteger.tex
@@ -1,7 +1,9 @@
 %!TEX root = ts.tex
 \begin{addedblock}
 \rSec0[unbounded_types]{Unbounded Types}
-
+\begin{reviewnote}
+The initial wording and motivation are available at \hyperlink{http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2013/n4038.html}{N4038 "Proposal for Unbounded-Precision Integer Types"}.
+\end{reviewnote}
 \rSec1[numeric.integer_data_proxy.syn]{Class \tcode{integer_data_proxy}}
 
 \begin{codeblock}
