--- a/rational.tex
+++ b/rational.tex
@@ -3,7 +3,9 @@
 
 \rSec0[rational.math]{Rational math}
 \begin{reviewnote}
-The initial wording and motivation are available at \hyperlink{http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2013/n3611.html}{N3611 "A Rational Number Library for C++"}.
+The initial wording and motivation are available at \href{http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2013/n3611.html}{N3611 "A Rational Number Library for C++"}.
+
+Was merged into this document because of the SG6 discussion of the \href{http://wiki.edg.com/pub/Wg21cologne2019/SG6/specification.html}{unpublished document} and because of the \href{https://wg21.link/P0101R0}{P0101R0} discussion \href{http://wiki.edg.com/bin/view/Wg21kona2015/DiscussionNotes#P0101R0}{at Kona 2015}.
 \end{reviewnote}
 \rSec1[rational.class]{Class \tcode{rational}}
 
