--- a/unboundedinteger.tex
+++ b/unboundedinteger.tex
@@ -2,7 +2,9 @@
 \begin{addedblock}
 \rSec0[unbounded_types]{Unbounded Types}
 \begin{reviewnote}
-The initial wording and motivation are available at \hyperlink{http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2013/n4038.html}{N4038 "Proposal for Unbounded-Precision Integer Types"}.
+The initial wording and motivation are available at \href{http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2013/n4038.html}{N4038 "Proposal for Unbounded-Precision Integer Types"}.
+
+Was merged into this document because of the \href{https://wg21.link/P0101R0}{P0101R0} discussion \href{http://wiki.edg.com/bin/view/Wg21kona2015/DiscussionNotes#P0101R0}{at Kona 2015}.
 \end{reviewnote}
 \rSec1[numeric.integer_data_proxy.syn]{Class \tcode{integer_data_proxy}}
 
