--- a/wideinteger.tex
+++ b/wideinteger.tex
@@ -2,6 +2,11 @@
 
 \rSec0[wide_integer]{Wide Integers}
 
+\begin{reviewnote}
+The initial wording and motivation are available at \href{https://wg21.link/P0539R4}{P0539R4 "A Proposal to add wide_int Template Class"}.
+
+Was merged into this document because of the SG6 discussion of the \href{http://wiki.edg.com/pub/Wg21cologne2019/SG6/specification.html}{unpublished document} and as the consequences of multiple P0539 discussions.
+\end{reviewnote}
 
 \indexlibrary{\idxhdr{wide_integer}}%
 \rSec1[numeric.limits]{Class template \tcode{numeric_limits}}
