--- a/aliases.tex
+++ b/aliases.tex
@@ -2,7 +2,9 @@
 
 \rSec0[parametric_aliases]{Parametric aliases}
 \begin{reviewnote}
-The initial wording and motivation are available at \hyperlink{http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2015/p0102r0.html}{P0102R0 "C++ Parametric Number Type Aliases"}.
+The initial wording and motivation are available at \href{http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2015/p0102r0.html}{P0102R0 "C++ Parametric Number Type Aliases"}.
+
+Was merged into this document because of the \href{https://wg21.link/P0101R0}{P0101R0} discussion \href{http://wiki.edg.com/bin/view/Wg21kona2015/DiscussionNotes#P0101R0}{at Kona 2015}.
 \end{reviewnote}
 
 Parametric aliases provide a machine-independent mechanism to specify the desired allocation size built-in or extended types.
